# bytus

./: .env.example  .gitignore  Cargo.toml  README.md  eslint.config.js  vite-plugin-meta-images.ts
.sqlx/: query-05f566a24f520bac6c527ff43833bdb07e7c06a89a4b64558da84458fcbac3dd.json  query-07c3e492091456ef3ebfe0d48e9864fa99eeb705c11f70cfc4b382203cba7409.json  query-1ba46b139c272478cf1f96abd66f9a60384f32c3bc8c5d209f4f9dd865635ea0.json  query-1d8b29b7746471a39b529f111c44b1a92b6678cc3e76139062ad7acbaf3e66ec.json  (+26 more)
backend/: .env.example  Cargo.toml  login.json  login3.json  nixpacks.toml  signup.json  signup2.json  signup3.json
backend/.sqlx/: query-07e61be140177b05e779b9d8f60c8273c84f6bc6788616050096bbb39c367fd4.json  query-29f9b503468bce96f605b8f15da1c97d28371b306f40cf74d7fcc333a7060b3b.json  query-548034d8e32529fff67936ffd88b1edad6f06dab19a64f80271939de265d27f7.json  query-572cdc51db06141f98544371a6798f7eb9f289a22fd59618a4de33c38b222630.json  query-66100169368b2c828b86bc23e76ae20fcf8086d148fc3e3e4b9c3463d3280251.json  query-710938fb48f06eff1cc5cce92af1940e9bbf8ddc7e592e91949bacedd6c02da0.json  query-e2c67dfc8f0612e3b129756c910ebc6c0a3be49ebe46ae4576d69240fd271c80.json
backend/migrations/: 001_initial_schema.sql
backend/src/: main.rs
backend/src/config/: jwt.rs  mod.rs
backend/src/handlers/: api_keys.rs  auth.rs  dashboard.rs  mod.rs  payments.rs  settings.rs  transactions.rs  treasury.rs
backend/src/middleware/: auth.rs  mod.rs  rate_limit.rs
backend/src/models/: user.rs
backend/src/routes/: mod.rs
client/: index.html
frontend/: .gitignore  (+3 more)
(+136 files in other folders)
